# ciri-navmesh

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_labyrinth.py  labyrinth.txt  labyrinth_big.txt  points.txt  tavern.txt
app/: interactive_main.cc  main.cc  svg_writer.cc  svg_writer.hh  vis_main.cc
lib/geometry/: dcel.cc  dcel.hh  predicates.cpp  predicates.hpp  primitives.cpp  primitives.hpp
lib/navmesh/: astar.cc  astar.hh  funnel.cc  funnel.hh  navmesh.cc  navmesh.hh
lib/triangulation/: delaunay.cc  delaunay.hh  greedy.cc  greedy.hh  i_triangulator.hh  quasi_greedy.cc  quasi_greedy.hh
tests/: test_geometry.cpp
utils/: generate_labyrinth.py
